FF: QA repairs: Accordion Component: Make sure accordion rows (articles) have a purpose/identity via a heading tag around the row title (a11y & hierarchy fix). FF: QA repairs: Accordion Component: Make sure tab-indexable content inside hidden rows isn't accessible. FF: QA repairs: Accordion Block: Make sure rows in the edit ui also hide overflow for consistency. FF: QA repairs: Accordion Block: Make sure Block Sections have an icon.

--- a/wp-content/themes/core/assets/css/src/admin/block-editor/blocks/tribe.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/block-editor/blocks/tribe.pcss
@@ -109,6 +109,7 @@
 	}
 
 	[data-type="tribe/accordion-section"] .block-editor-inner-blocks {
+		overflow: hidden;
 		padding-left: var(--grid-1-col);
 	}
 }
